k8s/canary/version1.yaml
# Version A
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      variant: a
  template:
    metadata:
      labels:
        app: nginx
        variant: a
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
