k8s/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-a
  namespace: dev  
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
