k8s/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: dev
spec:
  rules:  
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-a-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-b-service
            port:
              number: 80
